Update job roles - February 2026

--- a/sites/www.thunderbird.net/about/index.html
+++ b/sites/www.thunderbird.net/about/index.html
@@ -171,18 +171,18 @@
           {{ job_block(_('Sr. Software Engineer, Services'), 'Alejandro Aspinwall', high_res_img('thunderbird/staff/alejandro_aspinwall.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. UX Engineer, Desktop'), 'Alex Schmitz', high_res_img('thunderbird/staff/alexander_schmitz.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Principal Engineer'), 'Andrei Hajdukewycz', high_res_img('thunderbird/staff/andrei_hajdukewycz.png', scale='2x', alt_formats=('webp',))) }}
-          {{ job_block(_('Finance & Accounting Specialist'), 'Anthony Macchia', high_res_img('thunderbird/staff/anthony_macchia.png', scale='2x', alt_formats=('webp',))) }}
+          {{ job_block(_('Senior FP&A Analyst'), 'Anthony Macchia', high_res_img('thunderbird/staff/anthony_macchia.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Software Engineer, Mobile'), 'Ashley Soucar', high_res_img('thunderbird/staff/ashley_soucar.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Staff Software Engineer, Desktop'), 'Ben Campbell', high_res_img('thunderbird/staff/ben_campbell.png', scale='2x', optional_attributes={'class': 'pixel'})) }}
-          {{ job_block(_('Sr. Software Engineer, Desktop'), 'Brendan Abolivier', high_res_img('thunderbird/staff/brendan_abolivier.png', scale='2x', alt_formats=('webp',))) }}
-          {{ job_block(_('Software Engineer, Services'), 'Chris Aquino', high_res_img('thunderbird/staff/chris_aquino.png', scale='2x', alt_formats=('webp',))) }}
-          {{ job_block(_('Sr Staff Engineer, Strategic Initiatives'), 'Chris Roth', high_res_img('thunderbird/staff/chris_roth.png', scale='2x', alt_formats=('webp',))) }}
+          {{ job_block(_('Staff Software Engineer, Desktop'), 'Brendan Abolivier', high_res_img('thunderbird/staff/brendan_abolivier.png', scale='2x', alt_formats=('webp',))) }}
+          {{ job_block(_('Sr. Software Engineer, Services'), 'Chris Aquino', high_res_img('thunderbird/staff/chris_aquino.png', scale='2x', alt_formats=('webp',))) }}
+          {{ job_block(_('Manager, AI R&D'), 'Chris Roth', high_res_img('thunderbird/staff/chris_roth.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Manager, Release Operations'), 'Corey Bryant', high_res_img('thunderbird/staff/corey_bryant.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Release Engineer, Desktop'), 'Daniel Darnell', high_res_img('thunderbird/staff/daniel_darnell.png', scale='2x', alt_formats=('webp',))) }}
-          {{ job_block(_('Software Engineer, Services'), 'Davi Nakano', high_res_img('thunderbird/staff/davi_nakano.png', scale='2x', alt_formats=('webp',))) }}
-          {{ job_block(_('Software Engineer, Desktop'), 'Eleanor Dicharry', high_res_img('thunderbird/staff/eleanor_dicharry.png', scale='2x', alt_formats=('webp',))) }}
+          {{ job_block(_('Sr. Software Engineer, Services'), 'Davi Nakano', high_res_img('thunderbird/staff/davi_nakano.png', scale='2x', alt_formats=('webp',))) }}
+          {{ job_block(_('Staff Software Engineer, Desktop'), 'Eleanor Dicharry', high_res_img('thunderbird/staff/eleanor_dicharry.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Staff Software Engineer, Desktop'), 'Geoff Lankow', high_res_img('thunderbird/staff/geoff_lankow.png', scale='2x', alt_formats=('webp',))) }}
-          {{ job_block(_('Sr. Developer Relations Engineer'), 'Heather Ellsworth', high_res_img('thunderbird/staff/heather_ellsworth.png', scale='2x', alt_formats=('webp',))) }}
+          {{ job_block(_('Staff DevRel Engineer, Community Programs Lead'), 'Heather Ellsworth', high_res_img('thunderbird/staff/heather_ellsworth.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. UX Design Specialist'), 'Jesse Miksic', high_res_img('thunderbird/staff/jesse_miksic.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Software Engineer, Desktop Add-ons'), 'John Bieling', high_res_img('thunderbird/staff/john_bieling.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Manager, Mobile Apps'), 'Jon Bott', high_res_img('thunderbird/staff/jonathan_bott.png', scale='2x', alt_formats=('webp',))) }}
@@ -193,24 +193,24 @@
           {{ job_block(_('Manager, Customer Support Operations'), 'Lisa Wess', high_res_img('thunderbird/staff/lisa_wess.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Staff Software Engineer, Desktop'), 'Magnus Melin', high_res_img('thunderbird/staff/magnus_melin.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Manager, Web Services'), 'Malini Das', high_res_img('thunderbird/staff/malini_das.png', scale='2x', alt_formats=('webp',))) }}
-          {{ job_block(_('Manager, People Operations & Strategy'), 'Margaret Baker ', high_res_img('thunderbird/staff/margaret_baker.png', scale='2x', alt_formats=('webp',))) }}
+          {{ job_block(_('Sr. Manager, People Operations & Strategy'), 'Margaret Baker ', high_res_img('thunderbird/staff/margaret_baker.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Staff Software Engineer, Desktop'), 'Martin Giger', high_res_img('thunderbird/staff/martin_giger.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Staff Software Engineer, Services'), 'Melissa Autumn', high_res_img('thunderbird/staff/melissa_autumn.png', scale='2x', alt_formats=('webp',))) }}
-          {{ job_block(_('Communications & Engagement Coordinator'), 'Monica Ayhens-Madon', high_res_img('thunderbird/staff/monica_ayhens_madon.png', scale='2x', alt_formats=('webp',))) }}
-          {{ job_block(_('Manager, Marketing & Communications'), 'Natalie Ivanova', high_res_img('thunderbird/staff/natalie_ivanova.png', scale='2x', alt_formats=('webp',))) }}
-          {{ job_block(_('Sr Software Engineer, Mobile'), 'Rafael Tonholo', high_res_img('thunderbird/staff/rafael_tonholo.png', scale='2x', alt_formats=('webp',))) }}
+          {{ job_block(_('Communications & Engagement Specialist'), 'Monica Ayhens-Madon', high_res_img('thunderbird/staff/monica_ayhens_madon.png', scale='2x', alt_formats=('webp',))) }}
+          {{ job_block(_('Sr. Manager, Corporate Strategy'), 'Natalie Ivanova', high_res_img('thunderbird/staff/natalie_ivanova.png', scale='2x', alt_formats=('webp',))) }}
+          {{ job_block(_('Sr. Software Engineer, Mobile'), 'Rafael Tonholo', high_res_img('thunderbird/staff/rafael_tonholo.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Product Designer'), 'Rebecca Taylor', high_res_img('thunderbird/staff/rebecca_taylor.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Software Engineer, Test'), 'Rob Wood', high_res_img('thunderbird/staff/rob_wood.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('User Support Specialist'), 'Roland Tanglao', high_res_img('thunderbird/staff/roland_tanglao.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Site Reliability Engineer'), 'Ryan Jung', high_res_img('thunderbird/staff/ryan_jung.png', scale='2x', alt_formats=('webp',))) }}
-          {{ job_block(_('Associate Designer'), 'Solange Valverde', high_res_img('thunderbird/staff/solange_valverde.png', scale='2x', alt_formats=('webp',))) }}
+          {{ job_block(_('Product Designer'), 'Solange Valverde', high_res_img('thunderbird/staff/solange_valverde.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Release Engineer'), 'Stephen King', high_res_img('thunderbird/staff/stephen_king.png', scale='2x', alt_formats=('webp',))) }}
-          {{ job_block(_('Employee Experience Specialist'), 'Tarandeep Kaur', high_res_img('thunderbird/staff/tarandeep_kaur.png', scale='2x', alt_formats=('webp',))) }}
+          {{ job_block(_('Sr. People Partner'), 'Tarandeep Kaur', high_res_img('thunderbird/staff/tarandeep_kaur.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Manager, Desktop Engineering'), 'Toby Pilling', high_res_img('thunderbird/staff/toby_pilling.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Software Engineer, Mobile'), 'Todd Heasley', high_res_img('thunderbird/staff/todd_heasley.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Software Engineer, Desktop'), 'Vineet Deo', high_res_img('thunderbird/staff/vineet_deo.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Community Manager'), 'Wayne Mery', high_res_img('thunderbird/staff/wayne_mery.png', scale='2x', alt_formats=('webp',))) }}
-          {{ job_block(_('Sr. Software Engineer, Mobile'), 'Wolf Montwé', high_res_img('thunderbird/staff/wolf_montwe.png', scale='2x', alt_formats=('webp',))) }}
+          {{ job_block(_('Staff Software Engineer, Mobile'), 'Wolf Montwé', high_res_img('thunderbird/staff/wolf_montwe.png', scale='2x', alt_formats=('webp',))) }}
         </div>
       </div>
       <div class="section-text">
