--- a/sites/www.thunderbird.net/about/index.html
+++ b/sites/www.thunderbird.net/about/index.html
@@ -179,6 +179,7 @@
           {{ job_block(_('Manager, AI R&D'), 'Chris Roth', high_res_img('thunderbird/staff/chris_roth.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Manager, Release Operations'), 'Corey Bryant', high_res_img('thunderbird/staff/corey_bryant.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Release Engineer, Desktop'), 'Daniel Darnell', high_res_img('thunderbird/staff/daniel_darnell.png', scale='2x', alt_formats=('webp',))) }}
+          {{ job_block(_('Sr. Software Engineer, Mobile'), 'Danielle Golinsky', high_res_img('thunderbird/staff/danielle_golinsky.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Software Engineer, Services'), 'Davi Nakano', high_res_img('thunderbird/staff/davi_nakano.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Staff Software Engineer, Desktop'), 'Eleanor Dicharry', high_res_img('thunderbird/staff/eleanor_dicharry.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Staff Software Engineer, Desktop'), 'Geoff Lankow', high_res_img('thunderbird/staff/geoff_lankow.png', scale='2x', alt_formats=('webp',))) }}
@@ -186,18 +187,22 @@
           {{ job_block(_('Sr. UX Design Specialist'), 'Jesse Miksic', high_res_img('thunderbird/staff/jesse_miksic.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Software Engineer, Desktop Add-ons'), 'John Bieling', high_res_img('thunderbird/staff/john_bieling.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Manager, Mobile Apps'), 'Jon Bott', high_res_img('thunderbird/staff/jonathan_bott.png', scale='2x', alt_formats=('webp',))) }}
+          {{ job_block(_('Staff Software Engineer'), 'Jordan Kab', high_res_img('thunderbird/staff/jordan_kab.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Software Engineer, Desktop'), 'Justin Tracey', high_res_img('thunderbird/staff/justin_tracey.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Security Engineer, Desktop'), 'Kai Engert', high_res_img('thunderbird/staff/kai_engert.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Technical PM'), 'Kelly McSweeney', high_res_img('thunderbird/staff/kelly.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Manager, UI/UX Design Studio'), 'Laurel Terlesky', high_res_img('thunderbird/staff/laurel_terlesky.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Manager, Customer Support Operations'), 'Lisa Wess', high_res_img('thunderbird/staff/lisa_wess.png', scale='2x', alt_formats=('webp',))) }}
+          {{ job_block(_('Support Knowledge & Enablement Lead'), 'MadHatter McGinnis', high_res_img('thunderbird/staff/madhatter_mcginnis.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Staff Software Engineer, Desktop'), 'Magnus Melin', high_res_img('thunderbird/staff/magnus_melin.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Manager, Web Services'), 'Malini Das', high_res_img('thunderbird/staff/malini_das.png', scale='2x', alt_formats=('webp',))) }}
-          {{ job_block(_('Sr. Manager, People Operations & Strategy'), 'Margaret Baker ', high_res_img('thunderbird/staff/margaret_baker.png', scale='2x', alt_formats=('webp',))) }}
+          {{ job_block(_('Sr. Manager, People Operations & Strategy'), 'Margaret Baker', high_res_img('thunderbird/staff/margaret_baker.png', scale='2x', alt_formats=('webp',))) }}
+          {{ job_block(_('People & Talent Generalist'), 'Marie Gaggi', high_res_img('thunderbird/staff/marie_gaggi.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Staff Software Engineer, Desktop'), 'Martin Giger', high_res_img('thunderbird/staff/martin_giger.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Staff Software Engineer, Services'), 'Melissa Autumn', high_res_img('thunderbird/staff/melissa_autumn.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Communications & Engagement Specialist'), 'Monica Ayhens-Madon', high_res_img('thunderbird/staff/monica_ayhens_madon.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Manager, Corporate Strategy'), 'Natalie Ivanova', high_res_img('thunderbird/staff/natalie_ivanova.png', scale='2x', alt_formats=('webp',))) }}
+          {{ job_block(_('Senior Accountant'), 'Nitasia Dupree', high_res_img('thunderbird/staff/nitasia_dupree.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Software Engineer, Mobile'), 'Rafael Tonholo', high_res_img('thunderbird/staff/rafael_tonholo.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Product Designer'), 'Rebecca Taylor', high_res_img('thunderbird/staff/rebecca_taylor.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Software Engineer, Test'), 'Rob Wood', high_res_img('thunderbird/staff/rob_wood.png', scale='2x', alt_formats=('webp',))) }}
