More styling, use "super()" to show parent template content

--- a/sites/roadmaps.thunderbird.net/android/index.html
+++ b/sites/roadmaps.thunderbird.net/android/index.html
@@ -20,5 +20,6 @@
 <li><strong>JMAP Support Exploration</strong> - Planning for JMAP integration, learning what it means to add a new protocol on Android, and ensuring future proofing against proprietary protocols.</li>
 <li><strong>Exchange Support Exploration</strong> - Supporting Exchange will allow Desktop users to stay inside our ecosystem and not need to switch between applications.</li>
 <li><strong>Calendar Exploration</strong> - Emails and Calendars go hand in hand and it's time to start exploring the implementation of CalDav support and plan for a proper calendar integration on Android.</li>
-</ul>
+</ul>{{ super() }}
+
 {% endblock %}
