--- a/sites/roadmaps.thunderbird.net/desktop/index.html
+++ b/sites/roadmaps.thunderbird.net/desktop/index.html
@@ -32,5 +32,6 @@
 <li><strong>Customizable Shortcuts</strong> - Continue the work on customizable shortcuts to move away from XUL keys and allow users control of default keyboard combinations.</li>
 <li><strong>OS Integration</strong> - Improve the integration with native OS features like notifications, status bar, and system tray.</li>
 <li><strong>JMAP</strong> - Explore the implementation of the JMAP protocol.</li>
-</ul>
+</ul>{{ super() }}
+
 {% endblock %}
