--- a/sites/roadmaps.thunderbird.net/ios/index.html
+++ b/sites/roadmaps.thunderbird.net/ios/index.html
@@ -21,5 +21,6 @@
 <ul>
 <li><strong>Swipe Actions</strong> - Implement the most common swipe actions to interact with the message list.</li>
 <li><strong>Calendar Exploration</strong> - Emails and Calendars go hand in hand and we can start exploring the implementation of CalDav support and plan for a proper calendar integration on iOS.</li>
-</ul>
+</ul>{{ super() }}
+
 {% endblock %}
