--- a/sites/roadmaps.thunderbird.net/index.html
+++ b/sites/roadmaps.thunderbird.net/index.html
@@ -1,5 +1,6 @@
-{% extends "includes/base/page.html" %}
+{% extends "includes/base/landing-page.html" %}
 {% block content %}
 <h1>Roadmaps</h1>
-<p>Welcome to the Thunderbird roadmaps for our Desktop, Android, and iOS clients!</p>
+<p>Welcome to the Thunderbird roadmaps for our Desktop, Android, and iOS clients!</p>{{ super() }}
+
 {% endblock %}
