roadmap page layout

--- a/sites/roadmaps.thunderbird.net/desktop/index.html
+++ b/sites/roadmaps.thunderbird.net/desktop/index.html
@@ -1,5 +1,5 @@
-{% extends "includes/base/page.html" %}
-{% block content %}
+{% extends "includes/base/product-or-service.html" %}
+{% block roadmap_content %}
 <p>Welcome to the <strong>Thunderbird Desktop</strong> client roadmap!</p>
 <h1>🏗️ Active</h1>
 <ul>
